Started work on register/login system. Fixed visual bug with footer causing white space at bottom of page.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,10 @@ html, body {
     width: 100%;
 }
 
+.inofooter, .inoheader {
+    background-color: #d1d1d1 !important;
+}
+
 .inoheader {
     border-bottom: 1px solid slategrey;
 }
@@ -11,13 +15,21 @@ html, body {
     height: 30px;
     width: 100%;
     position: absolute;
-    bottom: 10px;
+    bottom: 0;
     left: 0;
     border-top: 1px solid slategrey;
     padding-left: 40%;
 }
 
+.inofooter-nav {
+    padding-top: 3px !important;
+}
+
+.inofooter-nav li.nav-item .nav-link{
+    padding-top: 0px !important;
+    padding-bottom: 0px !important;
+}
+
 #inobody {
-    height: 100%;
     padding: 15px;
 }
